# gui_apps

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/gui_apps/bluetooth_manager/: bluetooth_manager.py
